# Riemann-dashboard

./: .gitignore  Cargo.toml  Readme.md  analyse.py  build.ps1  desktop.ini  premier.py  riemann_viz.py  terme mathématique et signe.docx
python/: analyse.py  premier.py
src/: lib.rs  main.rs
src/app/: dashboard.rs  mod.rs  plots.rs  riemann_viz.rs  surface3d.rs
src/primes/: mod.rs  sieve.rs  store.rs
src/riemann/: mod.rs  stats.rs  zeros.rs  zeta.rs
